[package]
name = "photo-server"
version = "0.1.0"
authors = ["Bjorn Arnholtz <bjorn.arnholtz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'
lto = true
panic="abort"
codegen-units = 1

[dependencies.futures-channel]
version = "0.3.12"
default-features = false
features=[]

[dependencies.async-std]
version = "1.9.0"
default-features = false
features = ['attributes']

[dependencies.rand]
version = "0.8.3"
default-features = false
features=['std', 'std_rng']

[dependencies.bs58]
version = "0.4.0"
default-features = false
features=['std', 'alloc']

[dependencies.chrono]
version = "0.4.19"
default-features = false
features=['clock', 'serde']

[dependencies.serde]
version = "1.0.123"
default-features = false

[dependencies.serde_json]
version = "1.0.62"
default-features = false

[dependencies.serde_derive]
version = "1.0.123"
default-features = false

[dependencies.argh]
version = "0.1.4"
default-features = false

[dependencies.tide]
version = "0.16.0"
default-features = false
features=['h1-server']
